2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-28  Michael Koch  <konqueror@gmx.de>

        * java/security/AccessControlContext.java:
        Reformatted.

	2005-04-28  Andreas Tobler  <a.tobler@schweiz.ch>

        * java/security/Security.java (Security): Silence the warning about no
        providers found in the no debug case.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-27  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicScrollBarUI
        (getThumbBounds): Do not make thumb smaller than
        minimumThumbSize.
        * javax/swing/plaf/metal/MetalLookAndFeel
        (initComponentDefaults): Added color defaults for ScrollBar.
        * javax/swing/plaf/metal/MetalScrollBarUI
        (paintThumb): Added.
        (getMinimumThumbSize): Added.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-27  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalLookAndFeel
        (initComponentDefaults): Added some default colors.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-27  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * java/net/URL.java: Remove org.metastatic.jessie from default
        protocol search path.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-27  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicScrollBarUI.java
        (configureScrollBarColors: Changed key 'ScrollBar.thumbLightShadow'
        to 'ScrollBar.thumbShadow'. The formes does not exist.
        (paintThumb): Use BasicGraphicsUtils for painting the thumb.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-27  Chris Burdess  <dog@gnu.org>

        * java/net/protocol/http/HTTPURLConnection.java (connect): Accept
        absolute and relative paths in Location header.
