@@ -4,6 +4,15 @@
 
 	2005-04-28  Michael Koch  <konqueror@gmx.de>
 
+        * java/nio/charset/Charset.java
+        (providers2): Renamed from 'providers'.
+
+2005-05-15  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
+	2005-04-28  Michael Koch  <konqueror@gmx.de>
+
         * java/security/AccessControlContext.java:
         Reformatted.
 
